--- a/contact.html
+++ b/contact.html
@@ -10,13 +10,6 @@
 	<!-- Page Title -->
 	<title>Kontakt</title>
 
-	<link rel="shortcut icon" href="assets/images/logo/favicon.png" type="image/x-icon">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<link href="resources/css/bootstrap-theme.css" rel="stylesheet">
-	<link href="resources/css/bootstrap-theme.min.css" rel="stylesheet">
-	<link href="resources/css/bootstrap.css" rel="stylesheet">
-	<link href="resources/css/bootstrap.css.map" rel="stylesheet">
 	<link href="resources/css/bootstrap.min.css" rel="stylesheet">
 	<link href="resources/css/stylesheet01.css" rel="stylesheet">
 	<link href="/resources/css/loginStyle.css" rel="stylesheet">
@@ -41,7 +34,7 @@
 			<div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
 				<ul class="navbar-nav ml-auto flex-nowrap">
 					<li class="nav-item"><a href="index.html" class="nav-link m-2 menu-item nav-active">Home</a></li>
-					<li class="nav-item"><a href="restaurants.html" class="nav-link m-2 menu-item">Restaurants</a></li>
+					<li class="nav-item"><a href="restaurantsRV.html" class="nav-link m-2 menu-item">Restaurants</a></li>
 					<li class="nav-item"><a href="#" class="nav-link m-2 menu-item">Kontakt</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
