--- a/einstein.html
+++ b/einstein.html
@@ -9,170 +9,174 @@
     <!-- Die 3 Meta-Tags oben *müssen* zuerst im head stehen; jeglicher sonstiger head-Inhalt muss *nach* diesen Tags kommen -->
     <title>Café Einstein</title>
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="resources/css/bootstrap-theme.css" rel="stylesheet">
-    <link href="resources/css/bootstrap-theme.min.css" rel="stylesheet">
-    <link href="resources/css/bootstrap.css" rel="stylesheet">
-    <link href="resources/css/bootstrap.css.map" rel="stylesheet">
     <link href="resources/css/bootstrap.min.css" rel="stylesheet">
     <link href="resources/css/stylesheet01.css" rel="stylesheet">
-    <link href="resources/css/stylesheet01.css" rel="stylesheet">
     <link href="/resources/css/loginStyle.css" rel="stylesheet">
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body style="background-color: #7F6E64">
-	<header>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<div class="d-flex flex-grow-1">
-				<span class="w-100 d-lg-none d-block">
-					<!-- hidden spacer to center brand on mobile -->
-				</span> <a class="navbar-brand d-none d-lg-inline-block" href="index.html">
-					restaurando </a> <a class="navbar-brand-two mx-auto d-lg-none d-inline-block" href="#">
-					restaurando
-				</a>
-				<div class="w-100 text-right">
-					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-				</div>
-			</div>
-			<div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
-				<ul class="navbar-nav ml-auto flex-nowrap">
-					<li class="nav-item"><a href="index.html" class="nav-link m-2 menu-item nav-active">Home</a></li>
-					<li class="nav-item"><a href="restaurantsUlm.html" class="nav-link m-2 menu-item">Restaurants</a></li>
-					<li class="nav-item"><a href="contact.html" class="nav-link m-2 menu-item">Kontakt</a></li>
-				</ul>
-				<ul class="nav navbar-nav navbar-right">
-					<li>
-						<button onclick="document.getElementById('id01').style.display='block'" style="width:auto;"><img
-								src="/resources/img/login.png"> Login</button>
-
-					</li>
-				</ul>
-			</div>
-		</nav>
-
-		<div id="id01" class="modal">
-			<form class="modal-content animate" action="../../../backend/checkuser.php" method="post">
-				<div class="imgcontainer">
-					<span onclick="document.getElementById('id01').style.display='none'" class="close"
-						title="Close Modal">&times;</span>
-					<img src="../../resources/img/user-icon-login-9.png" alt="Login" class="user">
-				</div>
-
-				<div class="container">
-					<label for="usernameinput"><b>Benutzername</b></label>
-					<input type="text" placeholder="Benutzernamen eingeben" name="usernameinput" maxlength="50"
-						required>
-					<br>
-					<label for="passwordinput"><b>Passwort</b></label>
-					<input type="password" placeholder="Passwort eingeben" name="passwordinput" maxlength="30" required>
-					<br>
-					<button type="submit">Login</button>
-				</div>
-			</form>
-        </div>
-        
-    <div class="jumbotron text-center" id="jumbotroneinstein">
-        <div id="titletext">
-            <h1>Café Einstein</h1>
-            <p>Reservieren Sie Ihren Tisch im Café Einstein Ulm - gleich
-                hier!</p>
-        </div>
-        <p>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-4">
-                <h3>Kategorien</h3>
-                <p>Frühstück, Kaffee, Kuchen</p>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="d-flex flex-grow-1">
+                <span class="w-100 d-lg-none d-block">
+                    <!-- hidden spacer to center brand on mobile -->
+                </span> <a class="navbar-brand d-none d-lg-inline-block" href="index.html">
+                    restaurando </a> <a class="navbar-brand-two mx-auto d-lg-none d-inline-block" href="#">
+                    restaurando
+                </a>
+                <div class="w-100 text-right">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
             </div>
-            <div class="col-sm-4">
-                <h3>Was?</h3>
-                <p>Modernes Lokal serviert bis 23 Uhr innovative Frühstückskreationen sowie schwäbische Kost, Steaks und Burger.</p>
+            <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
+                <ul class="navbar-nav ml-auto flex-nowrap">
+                    <li class="nav-item"><a href="index.html" class="nav-link m-2 menu-item nav-active">Home</a></li>
+                    <li class="nav-item"><a href="restaurantsUlm.html" class="nav-link m-2 menu-item">Restaurants</a>
+                    </li>
+                    <li class="nav-item"><a href="contact.html" class="nav-link m-2 menu-item">Kontakt</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;"><img
+                                src="/resources/img/login.png"> Login</button>
+
+                    </li>
+                </ul>
             </div>
-            <div class="col-sm-4">
-                <h3>Wo?</h3>
-                <p>Wichernstraße 10</p>
-                <p>89073 Ulm</p>
-            </div>
+        </nav>
+
+        <div id="id01" class="modal">
+            <form class="modal-content animate" action="../../../backend/checkuser.php" method="post">
+                <div class="imgcontainer">
+                    <span onclick="document.getElementById('id01').style.display='none'" class="close"
+                        title="Close Modal">&times;</span>
+                    <img src="../../resources/img/user-icon-login-9.png" alt="Login" class="user">
+                </div>
+
+                <div class="container">
+                    <label for="usernameinput"><b>Benutzername</b></label>
+                    <input type="text" placeholder="Benutzernamen eingeben" name="usernameinput" maxlength="50"
+                        required>
+                    <br>
+                    <label for="passwordinput"><b>Passwort</b></label>
+                    <input type="password" placeholder="Passwort eingeben" name="passwordinput" maxlength="30" required>
+                    <br>
+                    <button type="submit">Login</button>
+                </div>
+            </form>
         </div>
-    </div>
-    <div class="container" id="reserve">
-        <form action="/backend/addreservation.php" method="POST">
-            <h2 align="center">Reservierung bei Café Einstein</h2>
-            <input name="restaurant" hidden value="Café Einstein">
+
+        <div class="jumbotron text-center" id="jumbotroneinstein">
+            <div id="titletext">
+                <h1>Café Einstein</h1>
+                <p>Reservieren Sie Ihren Tisch im Café Einstein Ulm - gleich
+                    hier!</p>
+            </div>
+            <p>
+        </div>
+        <div class="container">
             <div class="row">
-					<div class="col-sm-4" align="center">
-						<h3>Datum auswählen:</h3>
-						<img src="https://img.icons8.com/metro/26/000000/calendar.png">
-						<input class="reservation" type="date" id="date" min="2019-11-13" max="2020-12-31" required name="dateinput">
-					</div>
-					<div class="col-sm-4" align="center">
-						<h3>Uhrzeit auswählen:</h3>
-						<img src="https://img.icons8.com/metro/26/000000/clock.png">
-						<input class="reservation" type="time" id="time" min="09:00" max="23:00" required name="timeinput">
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-sm-4" align="center">
-						<h3>Anzahl Personen auswählen:</h3>
-						<img src="https://img.icons8.com/ios-glyphs/26/000000/human-head.png">
-						<input class="reservation" type="text" id="amount" required name="amountinput">
-					</div>
-					<div class="col-sm-4" align="center">
-						<br>
-						<h3>Name:</h3>
-						<img src="https://img.icons8.com/ios-glyphs/26/000000/human-head.png">
-						<input class="reservation" type="text" id="name" required name="nameinput">
-					</div>
-				</div>
-				<p>
-					<p align="center">
-						<button class="button" href="#" role="button" id="buttonReservation" type="submit">Reservierung
-							absenden</button>
-					</p>
-			</form>
-		</div>
-	</header>
+                <div class="col-sm-4">
+                    <h3>Kategorien</h3>
+                    <p>Frühstück, Kaffee, Kuchen</p>
+                </div>
+                <div class="col-sm-4">
+                    <h3>Was?</h3>
+                    <p>Modernes Lokal serviert bis 23 Uhr innovative Frühstückskreationen sowie schwäbische Kost, Steaks
+                        und Burger.</p>
+                </div>
+                <div class="col-sm-4">
+                    <h3>Wo?</h3>
+                    <p>Wichernstraße 10</p>
+                    <p>89073 Ulm</p>
+                </div>
+            </div>
+        </div>
+        <div class="container" id="reserve">
+            <form action="/backend/addreservation.php" method="POST">
+                <h2 align="center">Reservierung bei Asia World Friedrichshafen</h2>
+                <input name="restaurant" hidden value="Asia World">
+                <div class="row">
+                    <div class="col-sm-4" align="center">
+                        <h3>Datum auswählen:</h3>
+                        <img src="https://img.icons8.com/metro/26/000000/calendar.png">
+                        <br>
+                        <br>
+                        <input class="reservation" type="date" id="date" min="2019-11-13" max="2020-12-31" required
+                            name="dateinput">
+                    </div>
+                    <div class="col-sm-4" align="center">
+                        <h3>Uhrzeit auswählen:</h3>
+                        <img src="https://img.icons8.com/metro/26/000000/clock.png">
+                        <br>
+                        <br>
+                        <input class="reservation" type="time" id="time" min="09:00" max="23:00" required
+                            name="timeinput">
+                    </div>
+                    <div class="col-sm-4" align="center">
+                        <h3>Anzahl Personen:</h3>
+                        <img src="https://img.icons8.com/ios-glyphs/26/000000/human-head.png">
+                        <br>
+                        <br>
+                        <input style="text-align:center" class="reservation" type="number" min="1" max="20" id="amount"
+                            required name="amountinput">
+                    </div>
+                </div>
+                <p>
+                    <br>
+                    <div style="text-align:center">
+                        <h3>Name:</h3>
+                        <img src="https://img.icons8.com/ios-glyphs/26/000000/human-head.png">
+                    </div>
+                    <input class="reservation" type="text" id="name" required name="nameinput">
+                </p>
+                <p>
+                    <p text-align="center">
+                        <button class="button" href="#" role="button" id="buttonReservation" type="submit">Reservierung
+                            absenden</button>
+                    </p>
+                </p>
+            </form>
+        </div>
+    </header>
 </body>
 <footer class="footer-distributed">
-	<div class="footer-left">
-		<h3>
-			<span>Restaurando</span>
-		</h3>
-		<p class="footer-links">
-			<a href="index.html" class="link-1">Home</a> <a href="restaurantsUlm.html">Restaurants</a> <a
-				href="contact.html">Kontakt</a>
-		</p>
-		<p class="footer-company-name">Restaurando © 2019</p>
-	</div>
-	<div class="footer-center">
-		<div>
-			<i class="fa fa-map-marker"></i>
-			<p>
-				<span>Georgstraße 13</span> Ravensburg, Deutschland
-			</p>
-		</div>
-		<div>
-			<i class="fa fa-phone"></i>
-			<p>+49 1575 444444</p>
-		</div>
-		<div>
-			<i class="fa fa-envelope"></i>
-			<p>
-				<a href="mailto:jonas.schilling@sap.com">support@restaurando.com</a>
-			</p>
-		</div>
-	</div>
-	<div class="footer-right">
-		<p class="footer-company-about">
-			<span>Über uns</span> Restaurando beste Firma der Welt mit der besten Homepage der Welt. REALTALK
-		</p>
-	</div>
+    <div class="footer-left">
+        <h3>
+            <span>Restaurando</span>
+        </h3>
+        <p class="footer-links">
+            <a href="index.html" class="link-1">Home</a> <a href="restaurantsFN.html">Restaurants</a> <a
+                href="contact.html">Kontakt</a>
+        </p>
+        <p class="footer-company-name">Restaurando © 2019</p>
+    </div>
+    <div class="footer-center">
+        <div>
+            <i class="fa fa-map-marker"></i>
+            <p>
+                <span>Georgstraße 13</span> Ravensburg, Deutschland
+            </p>
+        </div>
+        <div>
+            <i class="fa fa-phone"></i>
+            <p>+49 1575 444444</p>
+        </div>
+        <div>
+            <i class="fa fa-envelope"></i>
+            <p>
+                <a href="mailto:jonas.schilling@sap.com">support@restaurando.com</a>
+            </p>
+        </div>
+    </div>
+    <div class="footer-right">
+        <p class="footer-company-about">
+            <span>Über uns</span> Restaurando beste Firma der Welt mit der besten Homepage der Welt. REALTALK
+        </p>
+    </div>
 </footer>
 
 </html>
