--- a/l'osteria.html
+++ b/l'osteria.html
@@ -9,13 +9,6 @@
     <!-- Die 3 Meta-Tags oben *müssen* zuerst im head stehen; jeglicher sonstiger head-Inhalt muss *nach* diesen Tags kommen -->
     <title>L'Osteria Ulm</title>
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="resources/css/bootstrap-theme.css" rel="stylesheet">
-    <link href="resources/css/bootstrap-theme.min.css" rel="stylesheet">
-    <link href="resources/css/bootstrap.css" rel="stylesheet">
-    <link href="resources/css/bootstrap.css.map" rel="stylesheet">
     <link href="resources/css/bootstrap.min.css" rel="stylesheet">
     <link href="resources/css/stylesheet01.css" rel="stylesheet">
     <link href="/resources/css/loginStyle.css" rel="stylesheet">
@@ -102,77 +95,87 @@
         </div>
     </div>
     <div class="container" id="reserve">
-        <form action="/backend/addreservation.php" method="POST">
-            <h2 align="center">Reservierung bei L'Osteria Ulm</h2>
-            <input name="restaurant" hidden value="L'Osteria Ulm">
-            <div class="row">
-					<div class="col-sm-4" align="center">
-						<h3>Datum auswählen:</h3>
-						<img src="https://img.icons8.com/metro/26/000000/calendar.png">
-						<input class="reservation" type="date" id="date" min="2019-11-13" max="2020-12-31" required name="dateinput">
-					</div>
-					<div class="col-sm-4" align="center">
-						<h3>Uhrzeit auswählen:</h3>
-						<img src="https://img.icons8.com/metro/26/000000/clock.png">
-						<input class="reservation" type="time" id="time" min="09:00" max="23:00" required name="timeinput">
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-sm-4" align="center">
-						<h3>Anzahl Personen auswählen:</h3>
-						<img src="https://img.icons8.com/ios-glyphs/26/000000/human-head.png">
-						<input class="reservation" type="text" id="amount" required name="amountinput">
-					</div>
-					<div class="col-sm-4" align="center">
-						<br>
-						<h3>Name:</h3>
-						<img src="https://img.icons8.com/ios-glyphs/26/000000/human-head.png">
-						<input class="reservation" type="text" id="name" required name="nameinput">
-					</div>
-				</div>
-				<p>
-					<p align="center">
-						<button class="button" href="#" role="button" id="buttonReservation" type="submit">Reservierung
-							absenden</button>
-					</p>
-			</form>
-		</div>
-	</header>
+            <form action="/backend/addreservation.php" method="POST">
+                <h2 align="center">Reservierung bei Asia World Friedrichshafen</h2>
+                <input name="restaurant" hidden value="Asia World">
+                <div class="row">
+                    <div class="col-sm-4" align="center">
+                        <h3>Datum auswählen:</h3>
+                        <img src="https://img.icons8.com/metro/26/000000/calendar.png">
+                        <br>
+                        <br>
+                        <input class="reservation" type="date" id="date" min="2019-11-13" max="2020-12-31" required
+                            name="dateinput">
+                    </div>
+                    <div class="col-sm-4" align="center">
+                        <h3>Uhrzeit auswählen:</h3>
+                        <img src="https://img.icons8.com/metro/26/000000/clock.png">
+                        <br>
+                        <br>
+                        <input class="reservation" type="time" id="time" min="09:00" max="23:00" required
+                            name="timeinput">
+                    </div>
+                    <div class="col-sm-4" align="center">
+                        <h3>Anzahl Personen:</h3>
+                        <img src="https://img.icons8.com/ios-glyphs/26/000000/human-head.png">
+                        <br>
+                        <br>
+                        <input style="text-align:center" class="reservation" type="number" min="1" max="20" id="amount" required
+                            name="amountinput">
+                    </div>
+                </div>
+                <p>
+                    <br>
+                    <div style="text-align:center">
+                        <h3>Name:</h3>
+                        <img src="https://img.icons8.com/ios-glyphs/26/000000/human-head.png">
+                    </div>
+                    <input class="reservation" type="text" id="name" required name="nameinput">
+                </p>
+                <p>
+                    <p text-align="center">
+                        <button class="button" href="#" role="button" id="buttonReservation" type="submit">Reservierung
+                            absenden</button>
+                    </p>
+                </p>
+            </form>
+        </div>
+    </header>
 </body>
 <footer class="footer-distributed">
-	<div class="footer-left">
-		<h3>
-			<span>Restaurando</span>
-		</h3>
-		<p class="footer-links">
-			<a href="index.html" class="link-1">Home</a> <a href="restaurantsUlm.html">Restaurants</a> <a
-				href="contact.html">Kontakt</a>
-		</p>
-		<p class="footer-company-name">Restaurando © 2019</p>
-	</div>
-	<div class="footer-center">
-		<div>
-			<i class="fa fa-map-marker"></i>
-			<p>
-				<span>Georgstraße 13</span> Ravensburg, Deutschland
-			</p>
-		</div>
-		<div>
-			<i class="fa fa-phone"></i>
-			<p>+49 1575 444444</p>
-		</div>
-		<div>
-			<i class="fa fa-envelope"></i>
-			<p>
-				<a href="mailto:jonas.schilling@sap.com">support@restaurando.com</a>
-			</p>
-		</div>
-	</div>
-	<div class="footer-right">
-		<p class="footer-company-about">
-			<span>Über uns</span> Restaurando beste Firma der Welt mit der besten Homepage der Welt. REALTALK
-		</p>
-	</div>
+    <div class="footer-left">
+        <h3>
+            <span>Restaurando</span>
+        </h3>
+        <p class="footer-links">
+            <a href="index.html" class="link-1">Home</a> <a href="restaurantsFN.html">Restaurants</a> <a
+                href="contact.html">Kontakt</a>
+        </p>
+        <p class="footer-company-name">Restaurando © 2019</p>
+    </div>
+    <div class="footer-center">
+        <div>
+            <i class="fa fa-map-marker"></i>
+            <p>
+                <span>Georgstraße 13</span> Ravensburg, Deutschland
+            </p>
+        </div>
+        <div>
+            <i class="fa fa-phone"></i>
+            <p>+49 1575 444444</p>
+        </div>
+        <div>
+            <i class="fa fa-envelope"></i>
+            <p>
+                <a href="mailto:jonas.schilling@sap.com">support@restaurando.com</a>
+            </p>
+        </div>
+    </div>
+    <div class="footer-right">
+        <p class="footer-company-about">
+            <span>Über uns</span> Restaurando beste Firma der Welt mit der besten Homepage der Welt. REALTALK
+        </p>
+    </div>
 </footer>
 
 </html>
